[gd_scene load_steps=8 format=3 uid="uid://b3ruqllcfspo1"]

[ext_resource type="Theme" uid="uid://cxldawy7hnlku" path="res://default_theme.tres" id="1_st5uv"]
[ext_resource type="Script" uid="uid://84whq0bed761" path="res://items/ui/PlayerInventoryView.gd" id="2"]
[ext_resource type="Script" uid="uid://muut3gmsg30f" path="res://items/ui/ItemsDisplayContainer.gd" id="3"]
[ext_resource type="Script" uid="uid://c0p814bkv8qxv" path="res://items/ui/ItemDetailView.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://dwt2awegps8rb" path="res://items/ui/ItemIcon.tscn" id="4_kp0oj"]
[ext_resource type="PackedScene" uid="uid://ckvawd0d573sn" path="res://items/ui/ItemButtonDisplay.tscn" id="5_tjcmg"]
[ext_resource type="PackedScene" uid="uid://cep2vfoh14qxb" path="res://core/StatsDisplay.tscn" id="7_tjcmg"]

[node name="InventoryView" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0
theme = ExtResource("1_st5uv")
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemsDisplayContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 6
script = ExtResource("3")
item_display_scene_path = ExtResource("4_kp0oj")
drop_enabled = false

[node name="ItemButtonDisplay" parent="VBoxContainer/ScrollContainer/MarginContainer/ItemsDisplayContainer" instance=ExtResource("5_tjcmg")]
layout_mode = 2

[node name="ItemButtonDisplay2" parent="VBoxContainer/ScrollContainer/MarginContainer/ItemsDisplayContainer" instance=ExtResource("5_tjcmg")]
layout_mode = 2

[node name="ItemDetailView" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4")

[node name="Panel" type="Panel" parent="ItemDetailView"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="ItemDetailView"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ItemDetailView/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="ItemNameLabel" type="Label" parent="ItemDetailView/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "name"

[node name="DetailLabel" type="Label" parent="ItemDetailView/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Item detail goes here"
horizontal_alignment = 1

[node name="StatsDisplay" parent="ItemDetailView/MarginContainer/VBoxContainer" instance=ExtResource("7_tjcmg")]
unique_name_in_owner = true
layout_mode = 2
show_empty = false
font_size = 48
icon_size = 48
stat_h_separation = 40
